--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -24,7 +24,7 @@
     }
 
     .countdown{
-        font-size: 3.2rem;
+        font-size: 3rem;
     }
 
     .ms{
